--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,10 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
+name: Run ESLint
+run-name: ${{ github.actor }} is running ESLint
 on: [push]
 jobs:
-  check-bats-version:
+  check-eslint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18'
       - run: npm install
       - run: npm run lint
